# monga_compiler

./: .gitignore  README.md  dune-project  monga_compiler.opam
src/: .merlin 2  astTypes.ml  ast_nodes.ml  codeGen.ml  dune  lexer.mll  parser.mly  typeCheck.ml  typeCheck.mli  typedAst.ml  typedAst.mli  types.ml  untypedAst.ml  utils.ml  utils.mli
test/codeGen/: array2_test.expected  array2_test.in  array2_test.ml  array_test.expected  array_test.ml  array_test.monga  arthm_test.expected  arthm_test.in  arthm_test.ml  cast_test.expected  cast_test.ml  cast_test.monga  codeGen.expected  codeGen.ml  condition_exp_test.expected  condition_exp_test.ml  condition_exp_test.monga  dune  function_call_test.expected  function_call_test.in  function_call_test.ml  gen.ml  global_assign_test.expected  global_assign_test.ml  global_assign_test.monga  hello_test.expected  hello_test.ml  hello_test.monga  if_test.expected  if_test.ml  if_test.monga  local_assign_test.expected  local_assign_test.ml  local_assign_test.monga  param_assign_test.expected  param_assign_test.in  param_assign_test.ml  recursion_test.expected  recursion_test.in  recursion_test.ml  (+8 more)
test/codeGen/inputs/: test1.in  test2.in  test4.in
test/lexer/: dune  lexerTest.expected  lexerTest.ml  test1.expected  test1.in  test1.ml
test/lexer/inputs/: test1.in  test10.in  test11.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in  test9.in
test/parser/: dune  parserTest.expected  parserTest.ml
test/parser/inputs/: test1.in  test2.in  (+2 more)
test/typeCheck/: dune  typeTest.expected  typeTest.ml
(+3 files in other folders)
