opam-version: "2.0"
name: "monga_compiler"
version: "0.1"
synopsis: "Compiler for the Monga language"
maintainer: "Gabriel Coutinho <38709327+GCdePaula@users.noreply.github.com>"
authors: "Gabriel Coutinho <38709327+GCdePaula@users.noreply.github.com>"
depends: [
  "ocaml" {= "4.08.1"}
  "base"
  "stdio"
  "dune"
  "menhir"
  "llvm"
  "ctypes-foreign"
  "merlin"
  "ocp-indent"
]
build: ["dune" "build" "-p" name "-j" jobs]
