
(tests
  (names hello_test array_test array2_test arthm_test cast_test
    condition_exp_test function_call_test global_assign_test if_test
    local_assign_test param_assign_test recursion_test while_test)
  (libraries Src llvm.executionengine llvm.analysis base stdio)
  (deps (glob_files *.monga))
  (action (run %{test}))
)

